--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,6 @@
 body{
-<<<<<<< HEAD
-    color: blue;
-=======
-    color: red;
->>>>>>> cabecera
+
+    color: gray;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
