--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body{
-    color: gray;
+    background: #4e4f55;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -8,9 +9,9 @@ body{
 }
 
 #cabecera{
-    background: #33A;
+    background: rgb(194, 194, 194);
     box-shadow: 0px 2px 20px 0px black;
-    color: white;
+    color: rgba(15, 27, 204, 0.993);
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
@@ -22,14 +23,23 @@ body{
     font-size: 0.8em;
 }
 
+#cabecera #logo{
+    width: 45px;
+    vertical-align: middle;
+}
+
 #container{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
 #container h1{
     font-size: 20px;
+}
+
+#post{
+    background: white;
+    padding: 1em;
 }
