--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,6 +18,10 @@ body{
     border: 1px solid rgb(185, 185, 185);
 }
 
+#post h1{
+    text-align: center;
+}
+
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
@@ -51,13 +55,6 @@ body{
     text-align: center;
     padding: 0.5em;
     box-shadow: 1px 2px 2px black;
-}
-
-#footer {
-    background: rgb(92, 92, 92);
-    color: white;
-    text-align: center;
-    padding: 0.5em;
 }
 
 #post{
